=Updating template and adding settings

--- a/views/_template.html
+++ b/views/_template.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<script src="resources/js/global/external.min.js"></script>
 		<link rel="stylesheet" href="resources/css/globalstyles.min.css"/>
     <link rel="stylesheet" href="resources/css/main.css"/>
@@ -26,17 +27,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-				<li><a href="/example">Chromecast</a></li>
-				<li><a href="/example">YouTube</a></li>
-				<li><a href="/example">Netflix</a></li>
-				<li><a href="/example">Settings</a></li>
+				<li><a href="/example">Play</a></li>
+				<li><a href="/editor">Editor</a></li>
+
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Web <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><a href="http://www.youtube.com" target="_blank">YouTube</a></li>
+            <li><a href="http://wwww.netflix.com" target="_blank">Netflix</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="http://www.directv.com">DIRECTV</a></li>
           </ul>
         </li>
       </ul>
@@ -47,7 +47,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="about">About</a></li>
+        <li><a href="about">Settings</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
